# recoverflow

./: .gitignore  README.md  pyproject.toml
configs/: default.json
data/: demo_benchmark.jsonl
reports_review/: attempts_flat.csv  hidden_generalization.csv  regression_summary.csv
reports_v2/: dwell_time_summary.csv  pass_at_k.csv  state_frequencies.csv
scripts/: run_anthropic_sample.py  run_demo.py  run_demo_openai.py  run_evalplus_sample.py  run_huggingface_sample.py
src/agent_repair_eval/: __init__.py  _child_runner.py  analysis.py  code_extraction.py  colab.py  feedback.py  hamsm.py  jsonl.py  llm.py  loaders.py  metrics.py  plots.py  prompts.py  runner.py  sandbox.py  schemas.py  security.py  states.py  utils.py
src/agent_repair_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_demo_pipeline.py  test_feedback_loop.py  test_hamsm_validation.py  test_output_format.py  test_significance.py
