[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-repair-eval"
version = "0.1.0"
description = "Objective process-level evaluation framework for LLM coding-agent repair trajectories."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "joblib>=1.3.0",
  "openai>=1.0.0",
  "evalplus>=0.2.0",
  "matplotlib>=3.8.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
